# petsc-ts

./: .gitignore  BuildFromPresets.sh  CMakeLists.txt  CMakePresets.json  myBuildFromPresets.sh
cmake_modules/: FindP4EST.cmake  FindSC.cmake
src/: ode.cpp
src/my_examples/: heat2d.cpp  heat2d_pseudo_time.cpp  vanderpol.cpp  vanderpol_time_bvp.cpp  vanderpol_time_bvp_ptc.cpp
src/nptel_examples/: heat2d.cpp  poisson.cpp  turing_patterns.cpp
src/vanderpol/: vanderpol_time_bvp.cpp  vanderpol_time_bvp_ptc.cpp  vanderpol_time_periodic_Tunkown_ptc.cpp  vanderpol_time_periodic_ptc.cpp
xrun/cases/heat2d_ptc/: runex.sh
xrun/cases/turing_patterns/: runex.sh
xrun/cases/vanderpol/: runex.sh
xrun/cases/vdp/: runex.sh
xrun/cases/vdp_bvp/: runex.sh
xrun/cases/vdp_bvp_ptc/: runex.sh
xrun/cases/vdp_periodic_Tunk_ptc/: plot_sol.py  runex.sh
xrun/cases/vdp_periodic_ptc/: compare_with_nonperiodic.py  runex.sh
xrun/scripts/: plot_sol.py
